--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "assignment5",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,14 +11,9 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "d3": "^7.9.0",
-    "next": "15.2.3",
+    "next": "15.2.4",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.3"
   }
 }
